--- a/index.html
+++ b/index.html
@@ -1,57 +1,113 @@
 Privacy Policy
-Effective Date: February 24, 2026 App Name: More Problems Developer: Mike DeRita
-1. Overview
-More Problems (“the App”) is an educational math practice app that provides multiple-choice problem runs and tracks high scores. This Privacy Policy explains what information is collected, how it’s used, and your choices.
-2. Information We Collect
-A. Information Stored Locally on Your Device
-The App stores certain gameplay data locally on your device (e.g., high score history, run results, difficulty history). This data is stored using Apple’s local storage (e.g., UserDefaults).
-* This data is stored on-device
-* It is not uploaded to a developer-operated server
-* Deleting the App removes this local data (unless you restore via device backup)
-B. Advertising Data (Google AdMob)
-The App uses Google AdMob to display ads. AdMob and its partners may automatically collect and process information to provide and measure ads, including:
-* Device identifiers (such as IDFA if you allow tracking, or other identifiers permitted by the platform)
-* Approximate location (derived from IP address or device settings, depending on configuration)
-* Ad interaction data (views, clicks, performance metrics)
-* Diagnostic information (crash data, performance data)
-* Other technical data (device type, OS version, language, network information)
-This data may be used for:
-* Serving ads (personalized or non-personalized)
-* Frequency capping (limiting repeated ads)
-* Ad fraud prevention and security
-* Reporting and analytics for ad performance
-C. App Tracking Transparency (ATT) / IDFA
-If you choose “Allow” when prompted by Apple’s tracking permission dialog, the App (via AdMob and supported ad networks) may access the Identifier for Advertisers (IDFA) to help deliver personalized ads and to measure ad effectiveness across apps and websites.
-If you choose “Ask App Not to Track”:
-* The App will still show ads
-* Ads may be non-personalized
-* The App will not access the IDFA for tracking purposes
+Effective Date: February 24, 2026 App Name: More Problems
+
+More Problems (“we,” “our,” or “us”) operates the More Problems mobile application (the “App”). This Privacy Policy explains how information is collected, used, and disclosed when you use our App.
+
+1. Information We Collect
+
+We do not require users to create accounts or provide personal information to use the App.
+
+However, certain information may be collected automatically through third-party services integrated into the App.
+
+A. Information Collected Automatically
+
+When you use the App, certain data may be collected automatically, including:
+
+Device identifiers (such as IDFA, when permitted)
+
+Advertising identifiers
+
+IP address
+
+Device type and operating system
+
+App interaction data
+
+Performance and diagnostic information
+
+This information may be collected by third-party partners such as Google AdMob.
+
+2. Advertising and Tracking
+
+The App uses Google AdMob to display advertisements.
+
+AdMob may collect and use data to:
+
+Serve personalized advertisements
+
+Measure ad performance
+
+Improve advertising services
+
+If you allow tracking through Apple’s App Tracking Transparency (ATT) prompt, advertising identifiers (such as IDFA) may be used to deliver personalized ads.
+
+If you deny tracking, non-personalized ads will be shown instead.
+
+You can change tracking permissions at any time in:
+
+Settings → Privacy & Security → Tracking
+
+For more information about how Google uses data, please visit:
+https://policies.google.com/privacy
+
 3. How We Use Information
-We use information to:
-* Provide app functionality (gameplay and high scores stored locally)
-* Display ads through AdMob
-* Measure ad performance and improve reliability (e.g., diagnostics)
-We do not require account creation and we do not sell personal information.
-4. Sharing of Information
-We do not run our own backend for user data. However, when ads are shown, information may be shared with:
-* Google AdMob (Google LLC) and its advertising partners for ad delivery, measurement, fraud prevention, and analytics.
-The data shared depends on whether you allow tracking and your device settings.
-5. Your Choices & Controls
-A. Tracking Permission (iOS)
-You can control tracking at any time:
-* iOS Settings → Privacy & Security → Tracking → toggle for the App
-B. Ad Personalization
-If you deny tracking, ads may be non-personalized. Some non-personalized ads may still use contextual signals (like app content, general location, or device type).
-C. Deleting Local Data
-You can remove locally stored game data by deleting the App from your device.
+
+Information collected through the App may be used to:
+
+Display advertisements
+
+Improve app performance and functionality
+
+Analyze usage trends
+
+Maintain security and stability
+
+We do not sell personal information.
+
+4. Data Sharing
+
+We do not directly share personal data.
+
+However, third-party service providers integrated into the App (such as Google AdMob) may collect and process information in accordance with their own privacy policies.
+
+We encourage users to review Google’s Privacy Policy for more information.
+
+5. Data Retention
+
+We do not store personal information directly.
+
+Third-party providers may retain collected data according to their own retention policies.
+
 6. Children’s Privacy
-The App is educational and may be used by students. The App does not knowingly collect personal information from children under 13 for our own use. However, ads served by AdMob may collect device data as described above.
-If the App is directed to children under 13 (or you intend it for kids), you must configure AdMob and App Store settings accordingly (for example, disabling personalized ads and enabling child-directed treatment). If you plan to target children, contact us and we will update the policy and configuration.
-7. Data Security
-We do not store user personal data on our own servers. Ad-related data is handled by Google and its partners under their security practices.
-8. International Users
-If you use the App outside the United States, ad partners may process data in other countries. Data processing is handled by Google/partners according to their policies and applicable laws.
+
+The App is not directed toward children under 13.
+
+If you believe a child has provided personal information, please contact us and we will take appropriate steps.
+
+7. Your Privacy Rights
+
+Depending on your location, you may have rights regarding your personal information, including:
+
+Access
+
+Correction
+
+Deletion
+
+Restriction of processing
+
+To exercise these rights, please contact us using the information below.
+
+8. Security
+
+We rely on industry-standard security practices and Apple’s iOS platform protections. However, no method of electronic transmission or storage is completely secure.
+
 9. Changes to This Privacy Policy
-We may update this policy as features change. Updates will be posted with a new effective date.
+
+We may update this Privacy Policy from time to time. Changes will be posted within the App or on our website with an updated effective date.
+
+10. Contact Us
+
+If you have questions about this Privacy Policy, you may contact us at:
 10. Contact
-If you have questions about this Privacy Policy, contact: Mike DeRita Email: deritaphoto@gmail.com
+If you have questions about this Privacy Policy, contact Email: deritaphoto@gmail.com
